fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body{
 	font-weight: 400;
 	font-style: normal;
 	background: #eeeeee;
+	overflow-y: hidden;
 }
 #introduction-jumbo{
 	width: 100%;
